# Bangumi007

./: .gitignore  Cargo.toml  index.html
crates/bangumi007/: Cargo.toml
crates/bangumi007/src/: main.rs
crates/bangumi007/src/module/: mod.rs
crates/bangumi007/src/module/config/: config.rs  mod.rs
crates/bangumi007/src/module/core/: dev_main.rs  mod.rs  scrobbler_server.rs
crates/bangumi007/src/module/database/: base.rs  library.rs  mod.rs
crates/bangumi007/src/module/database/cache/: mod.rs  rss.rs
crates/bangumi007/src/module/downloader/: mod.rs  qbittorrent.rs
crates/bangumi007/src/module/logger/: logger.rs
crates/bangumi007/src/module/parser/: bangumi_parser.rs  mikan_parser.rs  tmdb_parser.rs
crates/bangumi007/src/module/scrobbler/: bangumi.rs  mod.rs
crates/bangumi007/src/module/utils/: error.rs
crates/bangumi007/src/ui/: helloworld.rs  mainapp.rs  mod.rs
crates/bangumi007/src/ui/apps/: libraryapp.rs  logapp.rs  mod.rs  season_conf_dialog_window.rs  settingsapp.rs
crates/bangumi007/src/ui/binding/: library.rs  mod.rs  season_conf.rs
crates/bangumi007/src/ui/panels/: libraryapp.rs  logapp.rs  mod.rs  panel.rs  settingsapp.rs
data/config/: log4rs.yaml
src/: config.rs  main.rs
src/module/: mod.rs
src/module/config/: config.rs
src/module/core/: dev_main.rs  init.rs
src/module/database/: base.rs  library.rs  mod.rs
src/module/database/cache/: mod.rs  rss_mikan.rs
src/module/downloader/: qbittorrent.rs
src/module/logger/: logger.rs  mod.rs
src/module/parser/: bangumi_parser.rs  mikan_parser.rs  mod.rs  tmdb_parser.rs
src/module/utils/: error.rs
src/ui/: helloworld.rs
src/utils/: logger.rs  media_library.rs  mikan_parser.rs  mod.rs  qbittorrent.rs  rss_cache.rs  rss_parser.rs
