[package]
name = "bangumi007"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.4", features = ["blocking", "json", "multipart"] }
log = "0.4.21"
log4rs = "1.3.0"
xml-rs = "0.8.20"
sled = "0.34.7"
minidom = "0.15.2"
roxmltree = "0.20.0"
html-escape = "0.2.13"
fancy-regex = "0.13.0"
retry = "2.0.0"
config = "0.14.0"
lazy_static = "1.4.0"
serde_json = "1.0.117"
serde = { version = "1.0.201", features = ["derive"] }
toml = "0.8.12"
chrono = "0.4.38"
urlencoding = "2.1.3"
colored = "2.1.0"
regex = "1.10.4"
image = { version = "0.25.1", default-features = false, features = ["png", "jpeg", "webp"] }
rand = "0.8.5"
rocket = "0.5.1"
futures = "0.3.30"

[dependencies.egui_extras]
workspace = true
features = ["default", "image", "all_loaders"]

[dependencies.eframe]
workspace = true
features = [
    "default",
    "__screenshot", # __screenshot is so we can dump a screenshot using EFRAME_SCREENSHOT_TO
]

[dependencies.rusqlite]
version = "0.31.0"
features = ["bundled"]


[dependencies.async-std]
version = "1.6.5"
features = ["attributes"]